--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node build/src/server.js"
+    "start": "node build/src/server.js",
+    "dev": "nodemon src/server.ts"
   },
   "keywords": [
     "backend",
@@ -18,7 +19,13 @@
   "author": "Time-1",
   "license": "ISC",
   "devDependencies": {
-    "@types/node": "^22.5.4",
-    "typescript": "^5.5.4"
+    "@types/express": "^5.0.0",
+    "@types/node": "^22.7.4",
+    "nodemon": "^3.1.7",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.6.2"
+  },
+  "dependencies": {
+    "express": "^4.21.0"
   }
 }
