--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
   "devDependencies": {
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.0",
+    "@types/express-session": "^1.18.0",
+    "@types/ioredis": "^4.28.10",
     "@types/node": "^22.7.4",
     "@types/oracledb": "^6.5.1",
     "nodemon": "^3.1.7",
@@ -28,8 +30,12 @@
     "typescript": "^5.6.2"
   },
   "dependencies": {
+    "connect-redis": "^7.1.1",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "oracledb": "^6.6.0"
+    "express-session": "^1.18.1",
+    "ioredis": "^5.4.1",
+    "oracledb": "^6.6.0",
+    "redis": "^4.7.0"
   }
 }
