--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/express-session": "^1.18.0",
     "@types/ioredis": "^4.28.10",
     "@types/node": "^22.8.1",
+    "@types/nodemailer": "^6.4.16",
     "@types/oracledb": "^6.5.1",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
@@ -37,6 +38,7 @@
     "express": "^4.21.0",
     "express-session": "^1.18.1",
     "ioredis": "^5.4.1",
+    "nodemailer": "^6.9.16",
     "oracledb": "^6.6.0",
     "redis": "^4.7.0"
   }
