--- a/package.json
+++ b/package.json
@@ -31,8 +31,10 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "connect-redis": "^7.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
